--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,8 +1,15 @@
+.page-header {
+  background-color: #00314f;
+  @media (min-width: 1400px) {
+    background-color: #fff;
+  }
+}
+
 .page-header__wrapper {
   @include container;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 //left-header-column {toggler, menu}
@@ -10,46 +17,61 @@
 .page-header__toggler {
   @include btn-reset;
   position: relative;
-  width: 3.2rem;
-  height: 3.2rem;
+  width: 27px;
+  height: 27px;
   font-size: 0;
-  background-color: $c-light;
-  border-radius: 50%;
   z-index: 2;
+  @media (min-width: 1400px) {
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    justify-content: space-between;
+    background-color: #00314f;
+    color: #fff;
+    width: 132px;
+    height: 54px;
+    order: -1;
+    .page-header--menu-opened & {
+      font-size: 0;
+      order: 3;
+    }
+  }
+}
 
+.page-header__toggler-item {
   &::before,
   &::after {
     content: "";
     position: absolute;
     right: 0;
-    height: 2px;
-    background-color: $c-dark;
+    height: 3px;
+    background-color: $c-light;
     transition: 0.5s ease-in-out;
   }
 
   &::before {
-    top: 0.3rem;
-    width: 3rem;
-    box-shadow: 0 1.8rem 0 0 $c-dark;
+    top: 0;
+    width: 27px;
+    box-shadow: 0 24px 0 0 $c-light;
   }
 
   &::after {
-    top: 1.2rem;
-    width: 2.1rem;
+    top: 11.5px;
+    width: 27px;
   }
 
   .page-header--menu-opened & {
-    position: absolute;
-    right: 5%;
-    top: 2%;
     transition: 2s;
+    font-size: 0;
+    width: 27px;
+    height: 27px;
     &::before,
     &::after {
       top: 50%;
-      left: 50%;
       transition: 0.5s ease-in-out;
       transform: translate(-50%) rotate(45deg);
-      width: 2.6rem;
+      width: 27px;
       height: 2px;
       box-shadow: none;
     }
@@ -63,20 +85,26 @@
       &::before,
       &::after {
         background-color: #fff;
+        width: 27px;
       }
     }
   }
 
   &:hover {
     &::after {
-      width: 3rem;
+      width: 20px;
     }
   }
-}
-
-.page-header__left-column {
-  order: 1;
-  width: 300px;
+  @media (min-width: 1400px) {
+    &::before,
+    &::after {
+      right: 10px;
+      top: 14px;
+    }
+    &::after {
+      top: 26px;
+    }
+  }
 }
 
 .page-header__nav {
@@ -294,8 +322,7 @@
   padding: 1rem 0;
   padding-bottom: 0.5rem;
   color: $c-light;
-  order: 2;
-  justify-content: flex-end;
+  width: 100%;
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -306,35 +333,34 @@
   @media (max-width: $tablet) and (orientation: portrait) {
     top: 0;
     padding: 0.5rem 0;
-    width: 100%;
     z-index: 0;
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
     top: 0;
     padding: 0.5rem 0;
-    width: 100%;
     z-index: 0;
   }
 
-  @media (max-width: $desktop) {
-    order: 4;
-  }
   svg {
     display: block;
-    width: 100%;
+    max-width: 90%;
     height: auto;
-    fill: $c-dark;
+    fill: $c-light;
     width: 200px;
     height: 60px;
+    path {
+      fill: inherit;
+      stroke: inherit;
+    }
+    @media (min-width: 1400px) {
+      fill: $c-dark;
+    }
   }
-}
-
-.page-header__right-column {
-  order: 3;
-  width: 300px;
-  display: flex;
-  justify-content: space-between;
+  @media (min-width: 1400px) {
+    width: auto;
+    order: 0;
+  }
 }
 
 //button with hovered menu
@@ -422,70 +448,50 @@
 }
 
 .page-header__search {
-  position: relative;
   font-weight: 300;
-  display: none;
-  @media (min-width: $desktop) {
-    display: block;
-  }
+  margin-right: 5%;
   &-input {
-    display: none;
-    position: absolute;
-    height: 46px;
-    width: 300px;
-    left: -203%;
-    bottom: -105%;
-    padding-left: 5px;
+    background: url("../img/icons/icons.svg#search") no-repeat center;
+    border: none;
+    width: 24px;
+    height: 24px;
+    color: transparent;
+    cursor: pointer;
     font-size: 16px;
-
     font-family: inherit;
-    &:active,
-    &:focus {
-      display: block;
-      box-shadow: 0 0 5px #cacaca;
+    transition: all 0.5s;
+    padding: 0;
+    font-size: 0;
+    background-size: cover;
+    @media (min-width: 1400px) {
+      background: url("../img/icons/icons.svg#search-dark") no-repeat right;
+      background-size: 50%;
+      width: 132px;
+      height: 54px;
+      border: 1px solid #00314f;
+      font-size: 16px;
+      order: 3;
     }
     &:placeholder-shown {
       font-family: inherit;
+      padding-left: 15px;
+    }
+    &:focus {
+      width: 162px;
+      height: 54px;
+      padding-left: 15px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      font-size: 16px;
+      color: #000;
+      background-color: #fff;
+      cursor: auto;
     }
   }
-  &-button {
-    @include btn-reset;
-    border: 1px solid #00314f;
-    color: #00314f;
-    width: 100%;
-    padding-left: 10px;
-    padding-right: 40px;
-    height: 46px;
-    display: block;
-    font-size: 16px;
-    color: lightgrey;
-    position: relative;
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      border: 2px solid $c-blue;
-      top: 24%;
-      right: 10%;
-    }
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 10px;
-      height: 1px;
-      border: 1px solid $c-blue;
-      top: 57%;
-      right: 21%;
-      transform: rotate(-45deg);
-    }
-    &:focus + .page-header__search-input {
-      display: block;
-    }
-  }
+}
+
+.page-header__personal-account {
+  display: none;
 }
 
 .page-header__personal-account-menu {
