--- a/src/scss/general/mixins.scss
+++ b/src/scss/general/mixins.scss
@@ -6,15 +6,15 @@
 
 @mixin container {
   margin: 0 auto;
-  padding: 0 4rem;
-  width: 100%;
+  padding: 0 22rem;
+  max-width: 1440px;
 
   @media (min-width: $stop-scaling) {
     padding: 0 40px;
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
