--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -26,6 +26,8 @@
     display: flex;
     align-items: center;
     padding: 0 10px;
+    padding-left: 18px;
+    padding-right: 15px;
     justify-content: space-between;
     background-color: #00314f;
     color: #fff;
@@ -57,7 +59,7 @@
   }
 
   &::after {
-    top: 11.5px;
+    top: 12px;
     width: 27px;
   }
 
@@ -98,7 +100,7 @@
   @media (min-width: 1400px) {
     &::before,
     &::after {
-      right: 10px;
+      right: 15px;
       top: 14px;
     }
     &::after {
@@ -121,7 +123,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 4rem 3.5rem;
-  color: $c-dark;
+  color: $c-light;
   background-color: $c-dark;
   overflow: hidden;
 
@@ -342,6 +344,10 @@
     z-index: 0;
   }
 
+  @media (max-width: 320px) {
+    width: 150px;
+  }
+
   svg {
     display: block;
     max-width: 90%;
@@ -450,6 +456,8 @@
 .page-header__search {
   font-weight: 300;
   margin-right: 5%;
+  display: flex;
+  align-items: center;
   &-input {
     background: url("../img/icons/icons.svg#search") no-repeat center;
     border: none;
