--- a/src/scss/general/mixins.scss
+++ b/src/scss/general/mixins.scss
@@ -6,19 +6,19 @@
 
 @mixin container {
   margin: 0 auto;
-  padding: 0 22rem;
+  padding: 0 220px;
   max-width: 1440px;
 
   @media (min-width: $stop-scaling) {
     padding: 0 40px;
   }
 
-  @media (max-width: $tablet) and (orientation: portrait) {
-    padding: 0 2rem;
+  @media (max-width: $tablet) {
+    padding: 0 10px;
   }
 
-  @media (max-width: $mobile) and (orientation: landscape) {
-    padding: 0 1rem;
+  @media (max-width: 320px) {
+    padding: 0 10px;
   }
 }
 
@@ -58,4 +58,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
