--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -122,7 +122,6 @@
   transition: 0.5s;
   flex-direction: column;
   align-items: flex-start;
-  padding: 4rem 3.5rem;
   color: $c-light;
   background-color: $c-dark;
   overflow: hidden;
@@ -140,8 +139,9 @@
     transition: 0.5s;
     flex-direction: column;
     align-items: flex-start;
-    padding: 4rem 1.5rem;
     color: $c-dark;
+    padding-top: 60px;
+    padding-left: 50px;
     background-color: $c-dark;
 
     .page-header--menu-opened & {
@@ -158,7 +158,6 @@
     transform: translateX(-100%);
     flex-direction: column;
     align-items: flex-start;
-    padding: 2rem 3.5rem;
     transition: 0.5s;
     max-height: calc(var(--vh, 1vh) * 100);
     color: $c-light;
