--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -1,164 +1,100 @@
-.navigation-menu {
-    width: 100vw;
-}
-
-.navigation-menu__main-nav:not(.covered) {
-    overflow-x: hidden;
-    overflow-y: scroll;
-}
-
-.main-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    width: 100%;
-    padding-top: 30px;
-}
-
-.main-nav__list {
-    display: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    list-style: none;
-    color: #fff;
-    .page-header--menu-opened & {
-        display: block;
-        width: 100%;
-    }
-}
-
-.page-header--menu-opened {
-    .navigation-menu .main-nav__item:not(:last-child) {
-        margin-bottom: 20px;
-    }
-    .main-nav__item-link {
+#nav {
+    padding: 50px;
+    ul {
+        @include list-reset;
+        display: flex;
+        flex-direction: column;
         position: relative;
-        color: #fff;
-        max-width: 260px;
-    }
-    .navigation-menu__main-nav .main-nav__item {
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 18px;
-        letter-spacing: 0.04437rem;
-        display: flex;
-        justify-content: space-between;
-    }
-    .main-nav__submenu-toggle {
-        display: flex;
-        justify-content: flex-start;
-        align-content: center;
-        align-items: center;
-        width: 32px;
-        height: 22px;
-        background-color: rgba(0, 0, 0, 0);
-        color: #fff;
-        border: none;
-        margin-left: auto;
-        padding: 0;
-        outline: none;
-        &::after {
-            content: "";
-            display: block;
-            -webkit-transform: rotate(-45deg);
-            -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-            width: 0.875rem;
-            height: 0.875rem;
-            border-right: 1px solid;
-            border-bottom: 1px solid;
+        &:hover > li {
+            opacity: 0.5;
         }
     }
-    .main-nav__list--submenu.level-1 {
-        z-index: 2;
-        width: 90vw;
-        background-color: #4b6eb9;
-    }
-    .main-nav__list--submenu:not(.covered) {
-        overflow-y: auto;
-        overflow-x: hidden;
+    ul li {
+        margin-bottom: 20px;
+        &:hover {
+            opacity: 1;
+        }
     }
 
-    .header--open .navigation-menu .main-nav__list--submenu {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        opacity: 0;
-        padding-bottom: 20px;
-        padding-left: 4.5rem;
-        padding-right: 2.8125rem;
-        -webkit-transform: translate3d(100%, 0, 0);
-        transform: translate3d(100%, 0, 0);
-        pointer-events: none;
-        -webkit-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-    }
-    .main-nav__item-backward {
-        position: relative;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        margin-bottom: 2rem;
-    }
-    .navigation-menu .main-nav__item-backward .item-backward__btn {
-        position: absolute;
-        top: 50%;
-        left: -6rem;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        margin: 0;
-        padding: 0;
-        background: rgba(0, 0, 0, 0);
-        color: #fff;
-        border: none;
-        background: none;
-    }
-    .item-backward__btn svg {
-        -webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        transform: rotate(90deg);
-    }
-    .main-nav__item-backward .item-backward__link {
-        font-size: 16px;
-        line-height: 1.375rem;
-        letter-spacing: 0.04437rem;
-        font-weight: 700;
+    a {
+        text-decoration: none;
+        display: block;
+        width: 100%;
+        line-height: 40px;
         color: $c-light;
+        font-weight: bold;
+        &:hover {
+            opacity: 1;
+        }
     }
-    .main-nav__list--submenu.level-2 {
-        z-index: 3;
-        width: 80vw;
-        background-color: #1e1e1e;
-        display: none;
+
+    @keyframes space {
+        from {
+            left: -100px;
+        }
+        to {
+            left: -30px;
+        }
     }
-    .main-nav__list--submenu {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        opacity: 0;
-        padding-bottom: 8rem;
-        padding-left: 62px;
-        padding-right: 2.8125rem;
-        padding-top: 64px;
-        -webkit-transform: translate3d(100%, 0, 0);
-        transform: translate3d(100%, 0, 0);
-        pointer-events: none;
-        -webkit-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-    }
-    .main-nav__list--submenu.active {
-        -webkit-transform: translate(0);
-        -ms-transform: translate(0);
-        transform: translate(0);
-        pointer-events: auto;
+    a:hover,
+    a:focus {
         opacity: 1;
+        &.active {
+            padding-left: 30px;
+            opacity: 1;
+            &::before {
+                left: -30px;
+                position: absolute;
+                content: "— ";
+                animation: space 0.5s ease-in-out;
+                padding-left: 30px;
+            }
+        }
+    }
+    ul li ul {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 500px;
+        top: 0;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0.5s, opacity 1s;
+        z-index: 123;
+    }
+    ul li:hover > ul {
+        visibility: visible;
+        opacity: 1;
+    }
+    ul li ul li {
+        margin-top: 2px;
+        margin-bottom: 0;
+        font-size: 0.8em;
+    }
+    ul li ul li ul {
+        position: absolute;
+        top: 0px;
+        left: 500px;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0.5s, opacity 1s;
+    }
+}
+
+@media (max-width: $tablet) {
+    #nav {
+        ul li ul {
+            position: fixed;
+            background: #2c70e0;
+            left: 10%;
+            padding: 20px;
+            padding-top: 40px;
+            overflow: scroll;
+        }
+        ul li ul li ul {
+            position: fixed;
+            background: $c-blue;
+            left: 20%;
+        }
     }
 }
